--- a/mcot.html
+++ b/mcot.html
@@ -25,7 +25,7 @@
                         <li><a href="#">...</a></li>
                     </ul>
                 </li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="snake.html">Snake</a></li>
                 <li><a href="#">A propos</a></li>
             </ul>
         </nav>
