--- a/snake.html
+++ b/snake.html
@@ -10,7 +10,7 @@
   }
 
   body {
-    background: black;
+    background: url(images/cyberpunkwallpaper.jpg);
     display: flex;
     align-items: center;
     justify-content: center;
