--- a/snake.html
+++ b/snake.html
@@ -8,6 +8,8 @@
     height: 100%;
     margin: 0;
   }
+  
+  <p><a href="index.html">Retour à l'accueil</a></p>
 
   body {
     background: url(images/cyberpunkwallpaper.jpg);
