--- a/snake.html
+++ b/snake.html
@@ -3,14 +3,13 @@
 <head>
   <title>Basic Snake HTML Game</title>
   <meta charset="UTF-8">
+  <body> <p><a href="index.html">Retour à l'accueil</a></p> </body>
   <style>
   html, body {
     height: 100%;
     margin: 0;
   }
   
-  <p><a href="index.html">Retour à l'accueil</a></p>
-
   body {
     background: url(images/cyberpunkwallpaper.jpg);
     display: flex;
